--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -15,7 +15,7 @@ background {
 
 # INPUT FIELD
 input-field {
-    monitor =
+    monitor = DP-2
     size = 250, 60
     outline_thickness = 2
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
@@ -23,10 +23,10 @@ input-field {
     dots_center = true
     outer_color = rgba(0, 0, 0, 0)
     inner_color = rgba(0, 0, 0, 0.2)
-    font_color = $foreground
+    font_color = rgba(18, 94, 90, 1) # aqua
     fade_on_empty = false
     rounding = -1
-    check_color = rgb(204, 136, 34)
+    check_color = rgba(18, 94, 90, 1) # aqua 
     placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
     hide_input = false
     position = 0, -200
